# cryptominisat

./: CMakeLists.txt
cadiback/: CMakeLists.txt  cadiback.cpp  generate
cadical/: CMakeLists.txt  README.md  configure
